# prueba_de_entrada

./: dos.py  main.py  pyproject.toml
