[tool.poetry]
name = "AperVox-Prueba"
version = "0.2.0"
description = "Prueba de entrada para aprender el uso de herramientas"
authors = ["omar barcenas <omar.barcenas@octopy.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
pydantic = "^1.9.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
